--- a/src/tcBitcoin.Wallet/MainWindow.xaml
+++ b/src/tcBitcoin.Wallet/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TradeControl.Bitcoin"
         mc:Ignorable="d"
-        Title="Cash Account" Height="450" Width="800" Loaded="Window_Loaded" Closing="Window_Closing">
+        Title="Cash Account" Height="450" Width="800" Loaded="Window_Loaded" Closing="Window_Closing" Icon="/tradecontrol_icon_32.png">
 
     <Grid>
         <Grid.ColumnDefinitions>
